--- a/style/style.css
+++ b/style/style.css
@@ -8,5 +8,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Century Gothic", sans-serif}
     min-height: 100%;
 }
 body {
-  background: #fcf3e4;
+  background-position: center;
+  background-repeat: repeat;
+  background-size: auto;
+  background-image: url('../images/grey.png');
 }
